# modbus-stream

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  TEMPLATE_FIX.md  accelerometer-viewer_3.html  build.rs  build_and_test.bat  config.toml.example  sensor_reader.py  test_build.bat  test_server.bat  test_server.sh  tutorial.md
.claude/: CLAUDE.md
.claude/skills/: add-web-language-toggle.md
.github/workflows/: ci.yml
data/: example.csv  file.csv  file0.csv  file1.csv  record_20260303_113750.csv  record_20260303_130517.csv  record_20260303_163849.csv  record_20260303_172607.csv  record_20260305_151033.csv  record_20260305_151049.csv  record_20260316_093913.csv
extra/: DAQ_Modbus_MultiChs_v1.3.py  Dockerfile  SETTINGS_IMPLEMENTATION.md  SETTINGS_TESTING.md  Vibration_RS485_ModbusRTU_Communication_Guide_20250110.md  build_and_test.sh  disable_hpf.py  docker-compose.yml  integration_summary.md  test_build.sh
lib/: LICENSE.txt  TimeSeries.h  metadata.json
src/: config.rs  main.rs  modbus.rs  stream_backup.rs  tss_ml.rs  types.rs
src/routes/: config.rs  diagnostics.rs  mod.rs  read.rs  settings.rs  stream.rs  view.rs
src/routes/stream_backup/: manager.rs
static/css/: style.css
static/js/: i18n.js
templates/: base.html  dashboard.html  settings.html  view_all_metrics.html  view_csv.html  view_diagnostics.html  view_health.html  view_latest_raw.html  view_metrics.html  view_raw.html
templates/settings/: feedback.html  form.html  status-header.html
web/: app.js  index.html
