[package]
name = "modbus-stream"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "Modbus RTU communication interface for tri-axial accelerometer with web streaming capabilities"
license = "MIT OR Apache-2.0"
keywords = ["modbus", "accelerometer", "vibration", "streaming", "web"]
categories = ["embedded", "web-programming", "hardware-support"]

[dependencies]
# Web framework
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1.41", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Templating
minijinja = { version = "2.0", features = ["loader"] }
minijinja-autoreload = "2.0"

# Modbus communication
tokio-modbus = { version = "0.14", features = ["rtu"] }
tokio-serial = "5.4"

# WebSocket support
# Using axum's built-in WebSocket support
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true

[profile.dev]
opt-level = 0
debug = true
